--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "11.15.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "NODE_ENV=production nodemon MONGO_USER=laily MONGO_PASS:MwZ0kloNsWWxHN5F DEFAULT=kanban node app.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
